diesel_compile_tests/tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.stderr
error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:15:42
   |
LL |     let row_iter1 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ---- first mutable borrow occurs here
LL |     let row_iter2 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ^^^^ second mutable borrow occurs here
...
LL |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here

error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:23:42
   |
LL |     let row_iter1 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ---- first mutable borrow occurs here
LL |     let row_iter2 = LoadConnection::load(conn, sql_query("bar")).unwrap();
   |                                          ^^^^ second mutable borrow occurs here
...
LL |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here

error[E0499]: cannot borrow `*conn` as mutable more than once at a time
  --> tests/fail/sqlite_and_mysql_do_not_allow_multiple_iterators.rs:38:67
   |
LL |     let row_iter1 = LoadConnection::<PgRowByRowLoadingMode>::load(conn, sql_query("bar")).unwrap();
   |                                                                   ---- first mutable borrow occurs here
LL |     let row_iter2 = LoadConnection::<PgRowByRowLoadingMode>::load(conn, sql_query("bar")).unwrap();
   |                                                                   ^^^^ second mutable borrow occurs here
...
LL |     let _ = row_iter1.zip(row_iter2);
   |             --------- first borrow later used here
For more information about this error, try `rustc --explain E0499`.
